--- a/pages/titles/lib/index.css
+++ b/pages/titles/lib/index.css
@@ -479,15 +479,16 @@ a {
 .desc-image div {
     width: 100%;
     height: 100%;
-    background: rgb(51, 51, 51);
-    background: linear-gradient(0deg,
-            rgba(51, 51, 51, 1) 0%,
-            rgba(255, 255, 255, 0) 36%);
+    background: linear-gradient(to top, 
+    rgba(51, 51, 51, 1) 5%,    /* preto puro */
+    rgba(51, 51, 51, 0)     /* totalmente transparente */),
+    linear-gradient(to bottom, 
+    rgba(51, 51, 51, 1) 1%,    /* preto puro */
+    rgba(51, 51, 51, 0) 80%    /* totalmente transparente */);
 }
 
 .close-btn {
     background-color: #333;
-    border-radius: 50px;
     position: relative;
     z-index: 11;
 }
@@ -504,7 +505,6 @@ a {
     min-height: 30px;
     padding: 8px;
     border-radius: 50px;
-    background-color: #333;
     color: white;
     cursor: pointer;
 }
@@ -824,6 +824,27 @@ a {
     color: var(--green);
 }
 
+.image-cover {
+    position: relative
+}
+
+.close-btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.video-player {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+.video-player video {
+    width: 100%;
+    height: 100%;
+}
 /* END MODAL */
 
 @media screen and (max-width: 1660px) {
