feat: transicao ao abrir modais

--- a/pages/titles/lib/index.css
+++ b/pages/titles/lib/index.css
@@ -457,9 +457,16 @@ a {
     vertical-align: center;
     justify-content: center;
     z-index: 10;
-
     padding: 50px 0px;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;}
+
+.show-modal {
+    opacity: 1;
+    visibility: visible;
 }
+      
 
 .movie-player {
     padding: 0;
