--- a/pages/titles/lib/index.css
+++ b/pages/titles/lib/index.css
@@ -644,19 +644,19 @@ a {
     background-color: #616161;
 }
 
-.card:hover .overlay, .card.active .overlay{
-    display: flex;
-    background-image: linear-gradient(to right,
-            rgba(51, 51, 51, 0.95),
-            rgba(255, 255, 255, 0.01));
-}
-
-/* .card .overlay {
+/* .card:hover .overlay, .card.active .overlay{
     display: flex;
     background-image: linear-gradient(to right,
             rgba(51, 51, 51, 0.95),
             rgba(255, 255, 255, 0.01));
 } */
+
+.card .overlay {
+    display: flex;
+    background-image: linear-gradient(to right,
+            rgba(51, 51, 51, 0.95),
+            rgba(255, 255, 255, 0.01));
+}
 
 .overlay p {
     color: #bdbdbd;
@@ -860,6 +860,16 @@ a {
 .video-player video {
     width: 100%;
     height: 100%;
+}
+#hands {
+    /* faz com que elementos possam ser clicavel */
+    pointer-events: none;
+
+    /* faz ficar em cima dos elementos */
+    position: fixed;
+
+    /* fica à frente dos elementos */
+    z-index: 3;
 }
 /* END MODAL */
 
